--- a/docs/_posts/记录一个坑.md
+++ b/docs/_posts/记录一个坑.md
@@ -1,6 +1,10 @@
 ---
-title 记录
+title: 关于blog
+tags: code
+categories:
+ - 代码
 ---
+
 记录一个坑
 
 ![image-20190426113252557](https://ws3.sinaimg.cn/large/006tNc79ly1g2fvoraqzuj31yu0ty4ji.jpg)
